# q2m3

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  TECHNICAL_OVERVIEW.md  pyproject.toml
.github/: codecov.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-drafter.yml
data/: h3o_plus.xyz
doc/: Makefile
doc/source/: architecture.md  conf.py  core-concepts.md  development.md  getting-started.md  glossary.rst  index.rst
doc/source/api-reference/: core.rst  index.rst  interfaces.rst  package.rst  profiling.rst  sampling.rst  solvation.rst  utils.rst
doc/source/tutorials/: full-oneelectron-embedding.md  h2-mc-solvation.md  h2-qpe-validation.md  index.rst  (+2 more)
examples/: README.md  catalyst_benchmark.py  collect_h2_depth5_replay_dataset.py  collect_h2_mc_structure_analysis.py  collect_h2_water_count_convergence.py  collect_ion_catalyst_matrix.py  figure2_mc_shell_analysis.py  figure3_solvent_shell_snapshots.py  figure4_catalyst_ion_matrix.py  full_oneelectron_embedding.py  h2_8bit_qpe_benchmark.py  h2_cached_qpe_driven_mc.py  h2_mc_solvation.py  h2_mc_solvation_qjit.py  h2_mm_embedded_mc.py  h2_qpe_h2o_mm_minimal.py  h2_qpe_validation.py  h2_resource_estimation.py  h2_three_mode_comparison.py  h2_three_mode_qpe_mc.py  h3o_8bit_qpe_benchmark.py  h3o_basic.py  h3o_dynamic_trotter_oom_scan.py  h3o_mc_solvation.py  h3o_quantum_qpe.py  h3op_mc_solvation_w_HF_mm_embedding_correction.py  h3op_qpe_h2o_mm_full.py  ir_qre_correlation_analysis.py  ir_qre_trotter5_compile_survey.py  qpe_compile_cache_verify.py  qpe_memory_profile.py  resource_estimation_survey.py
examples/_archived/: README.md  h2_cached_qpe_driven_mc.py  h2_three_mode_qpe_mc.py  h3o_qpe_full_demo.py  qpe_compile_cache_verify.py
examples/h3op_demo/: __init__.py  analysis.py  computation.py  config.py  data_builder.py  output.py  profiling.py
examples/mc_solvation/: __init__.py  config.py  constants.py  energy.py  mc_loop.py  orchestrator.py  plotting.py  qpe_solver.py  solvent.py  statistics.py
src/q2m3/: __init__.py  constants.py  molecule.py  version.py
tests/: __init__.py  conftest.py  test_basic.py  test_device_utils.py  test_energy_shifted_qpe.py  test_h3op_demo.py  test_hamiltonian_utils.py  test_molecule.py  test_pennylane_hamiltonian.py  test_qpe_circuit.py  test_quantum_qmmm_integration.py  test_rdm.py  test_resource_estimation.py  test_sampling.py
tests/core/: test_eftqc_resource_estimation.py
tests/examples/: __init__.py  conftest.py  test_collect_h2_depth5_replay_dataset.py  test_collect_h2_mc_structure_analysis.py  test_collect_h2_water_count_convergence.py  test_collect_ion_catalyst_matrix.py  test_full_oneelectron_embedding.py  test_h2_resource_estimation.py  test_h3o_dynamic_trotter_oom_scan.py  test_ir_qre_correlation_analysis.py  test_ir_qre_trotter5_compile_survey.py  test_qpe_memory_profile.py  test_resource_estimation_survey.py  test_submission_figures.py
tests/interfaces/: test_fixed_mo_embedding.py
tests/profiling/: __init__.py  conftest.py  test_catalyst_ir.py  test_init.py  test_memory.py  test_orchestrator.py  test_qpe_profiler.py  test_timing.py
tests/solvation/: conftest.py  test_analysis.py  test_circuit_builder.py  test_config.py  test_energy.py  test_integration.py  test_ir_cache.py  test_mc_loop.py  test_orchestrator.py  test_phase_extraction.py  test_solvent.py  test_structure_analysis.py
tests/utils/: test_plotting.py
(+63 files in other folders)
